added the newsletter

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <p>Subscribe to our newsletter to receive our latest news.</p>
         <form class="form-inline mt-2" action=" /action_page.php">
           <input type="email" class="form-control" placeholder="Enter Email" id="email">
-          <button type="submit" class="btn btn-dark">Subscribe</button>
+          <button type="submit" class="btn btn-dark ml-2">Subscribe</button>
         </form>
       </section>
 
