added contact page

--- a/index.html
+++ b/index.html
@@ -170,8 +170,26 @@
       <!------Newsletter End------->
 
       <!------Contact Start------->
-  <div id="contact" class="">
-    
+  <div id="contact" class="w-50 mx-auto mt-3 pb-5">
+    <div class="post-heading text-center">
+      <h3 class="display-4 font-weight-bold">Contact Me</h3>
+      <hr class="w-50 mx-auto pb-5">
+    </div>
+    <form action="/action_page.php">
+      <div class="form-group">
+        <label for="email">Full name:</label>
+        <input type="text" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" id="email">
+      </div>
+      <div class="form-group">
+        <label for="email">Your Message:</label>
+        <textarea class="form-control"></textarea>
+      </div>
+      <button type="submit" class="btn btn-dark">Send</button>
+    </form>
   </div>
   
   <!------Contact End------->
