--- a/index.html
+++ b/index.html
@@ -1,36 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>My Portfolio</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css"
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Font Awesome -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+rel="stylesheet"
+/>
+<!-- MDB -->
+<!-- Font Awesome -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+
+<!-- MDB -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css"
+  rel="stylesheet"
+/>
 </head>
-<body>
+<body data-spy="scroll" data-target="#navbarResponsive">
 
   <div id="home">
   <!------Nav Start------>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -50,13 +74,13 @@
 
   
   <!------About Start------->
-  <div id="about" class="container mt-3 pb-5">
+  <div id="about" class="offset container mt-3 mb-5">
       <div class="post-heading text-center">
         <h3 class="display-4 font-weight-bold">About Me</h3>
-        <hr class="w-50 mx-auto pb-5">
+        <hr class="w-50 mx-auto mt-5">
       </div>
         <div class="row">
-          <div class="col-lg-6 col-md-12 col-12 ">
+          <div class="col-lg-6 col-md-12 col-12 pb-4">
             <img src="drew.jpg" class="img-fluid">
           </div>
           <div class="col-lg-6 col-md-12 col-12 ">
@@ -75,14 +99,14 @@
   <!------About End------->
 
     <!------Services Start------->
-    <div id="services" class="container mt-3 pb-5">
+    <div id="services" class="offset container mt-3 pb-5">
       <div class="post-heading text-center">
         <h3 class="display-4 font-weight-bold">Services</h3>
-        <hr class="w-50 mx-auto pb-5">
+        <hr class="w-50 mx-auto mt-5">
       </div>
 
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-12 pb-5">
+      <div class="row mt-5">
+        <div class="col-lg-4 col-md-6 col-12">
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="lucas.jpg" alt="Card image cap">
             <div class="card-body">
@@ -158,7 +182,7 @@
 
       <!------Newsletter Start------->
 
-      <section class="sec1 container-fluid mt-5 pb-5">
+      <section class="offset sec1 container-fluid mt-5 pb-5">
         <h2 class="mt-5">Newsletter</h2>
         <p>Subscribe to our newsletter to receive our latest news.</p>
         <form class="form-inline mt-2" action=" /action_page.php">
@@ -170,13 +194,13 @@
       <!------Newsletter End------->
 
       <!------Contact Start------->
-  <div id="contact" class="w-50 mx-auto mt-3 pb-5">
+  <div id="contact" class="offset container mt-3 mb-5">
     <div class="post-heading text-center">
       <h3 class="display-4 font-weight-bold">Contact Me</h3>
-      <hr class="w-50 mx-auto pb-5">
+      <hr class="w-50 mx-auto">
     </div>
     <form action="/action_page.php">
-      <div class="form-group">
+      <div class="form-group mt-5">
         <label for="email">Full name:</label>
         <input type="text" class="form-control" id="email">
       </div>
@@ -196,7 +220,7 @@
 
 
   <!------Footer Start------->
-<div class="container-fluid">
+<div class="container-fluid p-0">
     <footer
             class="text-center text-lg-start text-dark"
             style="background-color: #ECEFF1"
@@ -330,7 +354,7 @@
           style="background-color: rgba(0, 0, 0, 0.2)"
           >
         © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/"
+        <a class="text-dark" href="#"
           >Monika Bartosińska</a
           >
       </div>
@@ -345,10 +369,8 @@
 
 
 
-
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
  </body>
 </html>
